# Coloud-Computing-api

./: README.md  pyproject.toml
app/: createData.py  database.py  main.py  models.py  python_demo.py  schema.py
app/llm/: llm.py  template.py  zhipu.py
app/routers/: admin.py  cart.py  orders.py  products.py  stock.py  users.py
