[tool.poetry]
name = "cloud-computing"
version = "0.1.0"
description = ""
authors = ["Haohanblue <haohanblue@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
pymysql = "^1.1.1"
requests = "^2.32.3"
nanoid = "^2.0.0"
zhipuai = "^2.1.5.20230904"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
